--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera</title>
+	<meta charset="utf-8">
+	<script src="angular.min.js"></script>
+	<script src="app.js"></script>
+	<style>body {font-size: 1.3em; }</style>
+	<title>Name Calculator</title>
 </head>
-<body>
-<h1>Hello Coursera Students!</h1>
-<br>
-<h2>How its going!</h2>
+<body ng-app="NameCalculator">
+	<h1>My first AngularJS App!</h1>
+	<h2>Name Calculator</h2>
+	<div ng-controller="NameCalculatorController">
+		<div>
+			Your name:
+			<input type="text" ng-model="name" ng-keyup="displayNumeric();">
+		</div>
+		<div>
+			Total Numeric value of person's name is: {{totalValue}}
+		</div>
+	</div>
 </body>
 </html>
